# POUQ

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO  build.sh  clusterer.hpp  example.c  example.cpp  example.py  format.sh  libpouq.hpp  main.cpp  optimizer.hpp  pouq8.hpp  quantizer.hpp  run.sh  simd.hpp
.github/workflows/: ci.yaml
data/: READMD.md  README.md  install.sh
example/: ann.cpp  example.cpp  sq4.hpp  uq4.hpp
experiment/: exp1.py  exp2.py
experiment/util/: io.py
libplsq/: bitmap.hpp  clusterer.hpp  ivf.hpp  optimizer.hpp  utils.hpp
libposq/: bitmap.hpp  clusterer.hpp  ivf.hpp  optimizer.hpp  quantizer.hpp  utils.hpp
libposq/index/: ivf-sq8.hpp  ivf.hpp  posq8.hpp  sq8.hpp
libpouq/: CMakeLists.txt  Float32Quantizer.hpp  IVFIndex.hpp  Optimizer.hpp  POUQQuantizer.hpp  Quantizer.hpp  QuantizerImpl.hpp  Segmenter.hpp  UQ4Quantizer.hpp  bitmap.h  bitmap.hpp  clusterer.h  clusterer.hpp  def.h  distance.c  distance.h  f32.hpp  ivf.hpp  ivfindex.hpp  krange.h  optimize.c  optimize.cpp  optimize.h  optimize.hpp  optimizer.h  optimizer.hpp  pouq8.hpp  pso.h  quantizer.h  quantizer.hpp  quantizer2.hpp  qvector.h  segment.c  segment.cpp  segment.h  segment.hpp  segmenter.hpp  space.hpp  train.c  train.cpp  (+8 more)
libpouq/index/: f32q.hpp  ivf-sq8.hpp  ivf.hpp  pouq.hpp  pouq8.hpp  sq.hpp  sq8.hpp
libpouq/simd/: def.c  def.h  def.hpp  distance.c  distance.cpp  distance.h  distance.hpp  loss.c  loss.cpp  loss.h  loss.hpp
pypouq/: __init__.py  qvector.py
python/: CMakeLists.txt  README.md  baseline.py  binding.cpp  example.py  requirements.txt  setup.py
python/pouq/: __init__.py  pouq.py
reproduce/: ann.cpp  example.cpp  example.py  plot.py  run.py  run.sh
simd/: dp_cost.hpp  l2distance.hpp  quantization_loss.hpp
src/: CMakeLists.txt  clusterer.cpp  clusterer.h  optimizer.cpp  optimizer.h  option.h  quantizer.cpp  quantizer.h  util.h
test/: CMakeLists.txt  compare_error.cpp  quantizer_test.cpp  sq8impl.hpp  utils.hpp
test/baseline/: scalar_quantizer.cpp  scalar_quantizer.h  simple_scalar_quantizer.cpp  simple_scalar_quantizer.h
