CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(POUQ)

SET(CMAKE_CXX_STANDARD 17)

IF(APPLE)
    IF(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
        SET(OpenMP_CXX_FLAGS "-fopenmp=libomp")
        SET(OpenMP_CXX_LIB_NAMES "omp")
        SET(OpenMP_omp_LIBRARY omp)
    ENDIF()
ENDIF()

IF(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2 -mfma")
    ADD_DEFINITIONS(-DPOUQ_X86_64=1)
ELSEIF(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|ARM64")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
    ADD_DEFINITIONS(-DPOUQ_ARM64=1)
ENDIF()

FIND_PACKAGE(OpenMP REQUIRED)

ADD_EXECUTABLE(example example.cpp)
TARGET_LINK_LIBRARIES(example PRIVATE
        OpenMP::OpenMP_CXX
)
